@@ -10,6 +10,7 @@ package org.elasticsearch.xpack.core.ml.inference.assignment;
 import org.elasticsearch.ResourceAlreadyExistsException;
 import org.elasticsearch.ResourceNotFoundException;
 import org.elasticsearch.common.io.stream.Writeable;
+import org.elasticsearch.common.unit.ByteSizeValue;
 import org.elasticsearch.common.util.set.Sets;
 import org.elasticsearch.test.AbstractSerializingTestCase;
 import org.elasticsearch.xcontent.XContentParser;
@@ -23,7 +24,6 @@ import java.util.List;
 import java.util.Map;
 import java.util.Optional;
 import java.util.Set;
-import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 import static org.hamcrest.Matchers.arrayContainingInAnyOrder;
@@ -37,7 +37,7 @@ public class TrainedModelAssignmentTests extends AbstractSerializingTestCase<Tra
 
     public static TrainedModelAssignment randomInstance() {
         TrainedModelAssignment.Builder builder = TrainedModelAssignment.Builder.empty(randomParams());
-        List<String> nodes = Stream.generate(() -> randomAlphaOfLength(10)).limit(randomInt(5)).collect(Collectors.toList());
+        List<String> nodes = Stream.generate(() -> randomAlphaOfLength(10)).limit(randomInt(5)).toList();
         for (String node : nodes) {
             builder.addRoutingEntry(node, RoutingInfoTests.randomInstance());
         }
@@ -257,6 +257,21 @@ public class TrainedModelAssignmentTests extends AbstractSerializingTestCase<Tra
         assertThat(assignment.isSatisfied(Sets.newHashSet("node-1", "node-2", "node-3")), is(false));
     }
 
+    public void testMaxAssignedAllocations() {
+        TrainedModelAssignment assignment = TrainedModelAssignment.Builder.empty(randomTaskParams(10))
+            .addRoutingEntry("node-1", new RoutingInfo(1, 2, RoutingState.STARTED, ""))
+            .addRoutingEntry("node-2", new RoutingInfo(2, 1, RoutingState.STARTED, ""))
+            .addRoutingEntry("node-3", new RoutingInfo(3, 3, RoutingState.STARTING, ""))
+            .build();
+        assertThat(assignment.getMaxAssignedAllocations(), equalTo(6));
+
+        TrainedModelAssignment assignmentAfterRemovingNode = TrainedModelAssignment.Builder.fromAssignment(assignment)
+            .removeRoutingEntry("node-1")
+            .build();
+        assertThat(assignmentAfterRemovingNode.getMaxAssignedAllocations(), equalTo(6));
+        assertThat(assignmentAfterRemovingNode.totalCurrentAllocations(), equalTo(5));
+    }
+
     private void assertValueWithinPercentageOfExpectedRatio(long value, long totalCount, double ratio, double tolerance) {
         double expected = totalCount * ratio;
         double lowerBound = (1.0 - tolerance) * expected;
@@ -267,12 +282,14 @@ public class TrainedModelAssignmentTests extends AbstractSerializingTestCase<Tra
     }
 
     private static StartTrainedModelDeploymentAction.TaskParams randomTaskParams(int numberOfAllocations) {
+        long modelSize = randomNonNegativeLong();
         return new StartTrainedModelDeploymentAction.TaskParams(
             randomAlphaOfLength(10),
-            randomNonNegativeLong(),
+            modelSize,
             randomIntBetween(1, 8),
             numberOfAllocations,
-            randomIntBetween(1, 10000)
+            randomIntBetween(1, 10000),
+            randomBoolean() ? null : ByteSizeValue.ofBytes(randomLongBetween(0, modelSize + 1))
         );
     }
 
